# mbdb-app

./: .assets  .gitignore  .invenio  README.md  compileTailwind.sh  invenio.cfg  jsconfig.json  nrp  oarepo.yaml  package-lock.json  pyproject.toml  requirements.txt  tailwind.config.js  test_vocab.json  variables
local/mbdb-common/: MANIFEST.in  README.rst  setup.cfg
local/mbdb-common/mbdb_common/: vocabulary_getters.py
local/mbdb-common/mbdb_common/fixtures/: affiliations.yaml  catalogue.yaml  grants.yaml  organisms.yaml
local/mbdb-common/mbdb_common/ui/: components.py
models/mbdb-bli/: BLI.yaml  files.yaml  model.yaml  setup.cfg
models/mbdb-bli/mbdb_bli/: config.py  ext.py  proxies.py
models/mbdb-bli/mbdb_bli/alembic/: mbdb_bli_1_create_mbdb_bli_branch_for_mbdb_bli.py  mbdb_bli_2_initial_revision.py  mbdb_bli_3_nrp_install_revision.py
models/mbdb-bli/mbdb_bli/files/: api.py  models.py
models/mbdb-bli/mbdb_bli/files/dumpers/: edtf.py
models/mbdb-bli/mbdb_bli/models/: files.json  ui.json
models/mbdb-bli/mbdb_bli/records/: api.py  dumper.py  models.py
models/mbdb-bli/mbdb_bli/records/dumpers/: dumper.py  edtf.py
models/mbdb-bli/mbdb_bli/records/jsonschemas/: mbdb_bli-1.0.0.json
models/mbdb-bli/mbdb_bli/resources/files/: config.py  resource.py  ui.py
models/mbdb-bli/mbdb_bli/resources/records/: config.py  resource.py  ui.py
models/mbdb-bli/mbdb_bli/services/files/: config.py  permissions.py  schema.py  service.py  ui_schema.py
models/mbdb-bli/mbdb_bli/services/records/: config.py  facets.py  permissions.py  schema.py  search.py  service.py  ui_schema.py
models/mbdb-bli/mbdb_bli/translations/: messages.pot
models/mbdb-bli/mbdb_bli/views/draft_files/: api.py  app.py
models/mbdb-bli/mbdb_bli/views/files/: api.py  app.py
models/mbdb-bli/mbdb_bli/views/records/: api.py  app.py
models/mbdb-bli/tests/: conftest.py  test_resource.py  test_service.py
models/mbdb-bli/tests/files/: conftest.py  test_file_resources.py
models/mbdb-mst/: MST.yaml  files.yaml  model.yaml  setup.cfg
models/mbdb-mst/mbdb_mst/: config.py  ext.py  proxies.py
models/mbdb-mst/mbdb_mst/alembic/: 37ab32b96596_nrp_install_revision.py  635cd166e4b1_nrp_install_revision.py  ca932e1c4273_nrp_install_revision.py  mbdb_mst_10_nrp_install_revision.py  mbdb_mst_11_nrp_install_revision.py  mbdb_mst_12_nrp_install_revision.py  mbdb_mst_13_nrp_install_revision.py  mbdb_mst_1_create_mbdb_mst_branch_for_mbdb_mst.py  mbdb_mst_2_initial_revision.py  mbdb_mst_3_nrp_install_revision.py  mbdb_mst_4_nrp_install_revision.py  mbdb_mst_5_nrp_install_revision.py  mbdb_mst_6_nrp_install_revision.py  mbdb_mst_7_nrp_install_revision.py  mbdb_mst_8_nrp_install_revision.py  mbdb_mst_9_nrp_install_revision.py
models/mbdb-mst/mbdb_mst/files/: api.py  models.py
models/mbdb-mst/mbdb_mst/files/alembic/: 413ae05aa1e1_initial_revision.py  mbdb_mst_files_1_create_mbdb_mst_file_branch_for_mbdb_mst.py
models/mbdb-mst/mbdb_mst/files/dumpers/: edtf.py
models/mbdb-mst/mbdb_mst/models/: files.json  ui.json
models/mbdb-mst/mbdb_mst/records/: api.py  dumper.py  models.py
models/mbdb-mst/mbdb_mst/records/alembic/: mbdb_mst_2_initial_revision.py
models/mbdb-mst/mbdb_mst/records/dumpers/: dumper.py  edtf.py
models/mbdb-mst/mbdb_mst/records/jsonschemas/: mbdb_mst-1.0.0.json
models/mbdb-mst/mbdb_mst/resources/files/: config.py  resource.py  ui.py
models/mbdb-mst/mbdb_mst/resources/records/: config.py  resource.py  ui.py
models/mbdb-mst/mbdb_mst/services/files/: config.py  permissions.py  schema.py  service.py  ui_schema.py
models/mbdb-mst/mbdb_mst/services/records/: config.py  facets.py  permissions.py  schema.py  search.py  service.py  ui_schema.py
models/mbdb-mst/mbdb_mst/translations/: messages.pot
models/mbdb-mst/mbdb_mst/views/draft_files/: api.py  app.py
models/mbdb-mst/mbdb_mst/views/files/: api.py  app.py
models/mbdb-mst/tests/: conftest.py  test_resource.py  test_service.py
models/mbdb-mst/tests/files/: conftest.py  test_file_resources.py
models/mbdb-spr/: SPR.yaml  files.yaml  model.yaml  setup.cfg
models/mbdb-spr/mbdb_spr/: config.py  ext.py  proxies.py
models/mbdb-spr/mbdb_spr/alembic/: mbdb_spr_1_create_mbdb_spr_branch_for_mbdb_spr.py  mbdb_spr_2_initial_revision.py  mbdb_spr_3_nrp_install_revision.py
models/mbdb-spr/mbdb_spr/files/: api.py  models.py
models/mbdb-spr/mbdb_spr/models/: files.json  ui.json
models/mbdb-spr/mbdb_spr/records/: api.py  dumper.py  models.py
models/mbdb-spr/mbdb_spr/translations/: messages.pot
models/mbdb-spr/tests/: conftest.py  test_resource.py  test_service.py
models/mbdb-spr/tests/files/: conftest.py  test_file_resources.py
sites/mbdb-site/: .invenio  Pipfile  README.md  bla.js  build.sh  docker-compose-production.yml  docker-compose.development.yml  docker-compose.full.yml  docker-compose.yml  docker-services.yml  invenio.cfg  pyproject.toml  requirements.txt  variables
sites/mbdb-site/assets/less/: theme.less
sites/mbdb-site/docker/: Dockerfile.production
sites/mbdb-site/docker/nginx/: test.crt  test.key
sites/mbdb-site/docker/pgadmin/: servers.json
sites/mbdb-site/docker/uwsgi/: uwsgi.ini
sites/mbdb-site/site/: .gitkeep  setup.cfg
sites/mbdb-site/site/mbdb_site/: views.py  webpack.py
ui/mbdb-mst/: setup.cfg
ui/mbdb-mst-ui/: README.md  setup.cfg
ui/mbdb-mst-ui/mbdb_mst_ui/: __init__.py  config.py  ext.py  proxies.py  views.py
ui/mbdb-mst-ui/mbdb_mst_ui/resources/: config.py  edit_layout.json  filters.py  mbdb_files_component.py  resource.py
ui/mbdb-mst-ui/mbdb_mst_ui/theme/: webpack.py
ui/mbdb-mst/mbdb_mst/: config.py  ext.py  proxies.py  views.py
ui/mbdb-mst/mbdb_mst/resources/: config.py  resource.py
ui/mbdb-mst/mbdb_mst/theme/: webpack.py
ui/mbdb_mst_ui/: setup.cfg
ui/mbdb_mst_ui/mbdb_mst_ui/: __init__.py  config.py  ext.py
ui/mbdb_mst_ui/mbdb_mst_ui/resources/: config.py  resource.py
ui/mst-ui/: setup.cfg
ui/mst-ui/mst_ui/: __init__.py  config.py  ext.py  proxies.py  views.py
ui/mst-ui/mst_ui/resources/: config.py  resource.py
ui/mst-ui/mst_ui/theme/: webpack.py
(+1036 files in other folders)
