[project]
name = "repo"
version = "1.0.0"
description = ""
packages = []
authors = []
dependencies = [
    "invenio-drafts-resources>=1.0.4",
    "json5",
    "oarepo-published-service>=1.0.0",
    "oarepo-requests>=1.0.2",
    "oarepo-runtime",
    "oarepo-ui",
    "oarepo-vocabularies",
    "oarepo==12.*",
    "python-dotenv",
]
requires-python = ">=3.9,<3.11"

[project.entry-points."invenio_assets.webpack"]
branding = "ui.branding.webpack:theme"
i18n = "i18n.webpack:theme"
ui_mst = "ui.mst.webpack:theme"

[project.entry-points."invenio_base.blueprints"]
branding = "ui.branding:create_blueprint"
pages = "ui.pages:create_blueprint"
mst = "mst.views.records.app:create_app_blueprint"
mst_file = "mst.views.files.app:create_app_blueprint"
mst_file_draft = "mst.views.draft_files.app:create_app_blueprint"
ui_mst = "ui.mst:create_blueprint"

[project.entry-points."invenio_i18n.translations"]
translations = "i18n"
mst = "mst"
mst_file = "mst"

[project.entry-points."invenio_base.api_apps"]
mst = "mst.ext:MstExt"

[project.entry-points."invenio_base.apps"]
mst = "mst.ext:MstExt"

[project.entry-points."invenio_db.alembic"]
mst = "mst:alembic"

[project.entry-points."invenio_db.models"]
mst = "mst.records.models"
mst_file = "mst.files.models"

[project.entry-points."invenio_base.api_blueprints"]
mst = "mst.views.records.api:create_api_blueprint"
mst_file = "mst.views.files.api:create_api_blueprint"
mst_file_draft = "mst.views.draft_files.api:create_api_blueprint"

[project.entry-points."invenio_search.mappings"]
mst = "mst.records.mappings"
mst_file = "mst.files.mappings"

[project.entry-points."invenio_jsonschemas.schemas"]
mst = "mst.records.jsonschemas"

[project.entry-points."oarepo.models"]
mst = "mst.models:records.json"
mst_file = "mst.models:files.json"

[project.entry-points."oarepo.ui"]
mst = "mst.models:ui.json"
mst_file = "mst.models:ui.json"

[project.entry-points."oarepo.fixtures"]
mbdb-common = "common.fixtures"

[project.optional-dependencies]
tests = [
    "pytest-invenio>=1.4.11",
]

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"
