[project]
name = "repo"
version = "1.0.0"
description = ""
packages = []
authors = []
dependencies = [
    "invenio-drafts-resources>=1.0.4",
    "json5",
    "oarepo-published-service>=1.0.0",
    "oarepo-requests>=1.0.2",
    "oarepo-runtime",
    "oarepo-ui",
    "oarepo-vocabularies",
    "oarepo==12.*",
    "python-dotenv",
]
requires-python = ">=3.9,<3.11"

[project.entry-points."invenio_assets.webpack"]
branding = "ui.branding.webpack:theme"
i18n = "i18n.webpack:theme"
mst_ui = "ui.mst.webpack:theme"

[project.entry-points."invenio_base.blueprints"]
branding = "ui.branding:create_blueprint"
pages = "ui.pages:create_blueprint"
mst_ui = "ui.mst:create_blueprint"
mst = "mst.views.records.app:create_app_blueprint"
mst_file = "mst.views.files.app:create_app_blueprint"
mst_file_draft = "mst.views.draft_files.app:create_app_blueprint"
spr = "spr.views.records.app:create_app_blueprint"
spr_file = "spr.views.files.app:create_app_blueprint"
spr_file_draft = "spr.views.draft_files.app:create_app_blueprint"
bli = "bli.views.records.app:create_app_blueprint"
bli_file = "bli.views.files.app:create_app_blueprint"
bli_file_draft = "bli.views.draft_files.app:create_app_blueprint"
mst_requests = "mst.views.requests.api:create_api_blueprint"
bli_requests = "bli.views.requests.api:create_api_blueprint"
spr_requests = "spr.views.requests.api:create_api_blueprint"

[project.entry-points."invenio_i18n.translations"]
translations = "i18n"
mst = "mst"
mst_file = "mst"
spr = "spr"
spr_file = "spr"
bli = "bli"
bli_file = "bli"

[project.entry-points."invenio_db.alembic"]
repo = "common:alembic"

[project.entry-points."oarepo.fixtures"]
mbdb-common = "common.fixtures"

[project.entry-points."invenio_base.api_apps"]
mst = "mst.ext:MstExt"
spr = "spr.ext:SprExt"
bli = "bli.ext:BliExt"

[project.entry-points."invenio_base.apps"]
mst = "mst.ext:MstExt"
spr = "spr.ext:SprExt"
bli = "bli.ext:BliExt"

[project.entry-points."invenio_db.models"]
mst = "mst.records.models"
mst_file = "mst.files.models"
spr = "spr.records.models"
spr_file = "spr.files.models"
bli = "bli.records.models"
bli_file = "bli.files.models"
spr_file_draft = "spr.files.models"
mst_file_draft = "mst.files.models"
bli_file_draft = "bli.files.models"

[project.entry-points."invenio_base.api_blueprints"]
mst = "mst.views.records.api:create_api_blueprint"
mst_file = "mst.views.files.api:create_api_blueprint"
mst_file_draft = "mst.views.draft_files.api:create_api_blueprint"
spr = "spr.views.records.api:create_api_blueprint"
spr_file = "spr.views.files.api:create_api_blueprint"
spr_file_draft = "spr.views.draft_files.api:create_api_blueprint"
bli = "bli.views.records.api:create_api_blueprint"
bli_file = "bli.views.files.api:create_api_blueprint"
bli_file_draft = "bli.views.draft_files.api:create_api_blueprint"
mst_requests = "mst.views.requests.api:create_api_blueprint"
bli_requests = "bli.views.requests.api:create_api_blueprint"
spr_requests = "spr.views.requests.api:create_api_blueprint"

[project.entry-points."invenio_search.mappings"]
mst = "mst.records.mappings"
spr = "spr.records.mappings"
bli = "bli.records.mappings"

[project.entry-points."invenio_jsonschemas.schemas"]
mst = "mst.records.jsonschemas"
spr = "spr.records.jsonschemas"
bli = "bli.records.jsonschemas"

[project.entry-points."oarepo.models"]
mst = "mst.models:records.json"
spr = "spr.models:records.json"
bli = "bli.models:records.json"

[project.entry-points."oarepo.ui"]
mst = "mst.models:ui.json"
spr = "spr.models:ui.json"
bli = "bli.models:ui.json"

[project.optional-dependencies]
tests = [
    "pytest-invenio>=1.4.11",
]

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"
