[project]
name = "repo"
version = "1.0.0"
description = ""
packages = []
authors = []
dependencies = [
    "invenio-drafts-resources>=1.0.4",
    "json5",
    "luqum",
    "oarepo-communities>=5.0.0",
    "oarepo-dashboard",
    "oarepo-global-search>=1.0.13",
    "oarepo-published-service>=1.0.0",
    "oarepo-requests>=2.0.0",
    "oarepo-runtime",
    "oarepo-ui",
    "oarepo-vocabularies",
    "oarepo-workflows>=1.0.0",
    "oarepo[s3]==12.1.*",
    "python-dotenv",
]
requires-python = ">=3.12,<3.13"

[project.entry-points."invenio_assets.webpack"]
branding = "ui.branding.webpack:theme"
i18n = "i18n.webpack:theme"
mst_ui = "ui.mst.webpack:theme"
bli_ui = "ui.bli.webpack:theme"
spr_ui = "ui.spr.webpack:theme"
itc_ui = "ui.itc.webpack:theme"
mbdb_components = "ui.components.webpack:theme"

[project.entry-points."invenio_base.blueprints"]
branding = "ui.branding:create_blueprint"
components = "ui.components:create_blueprint"
pages = "ui.pages:create_blueprint"
mst_ui = "ui.mst:create_blueprint"
mst = "mst.views.records.app:create_app_blueprint"
mst_file = "mst.views.files.app:create_app_blueprint"
mst_file_draft = "mst.views.draft_files.app:create_app_blueprint"
spr_ui = "ui.spr:create_blueprint"
spr = "spr.views.records.app:create_app_blueprint"
spr_file = "spr.views.files.app:create_app_blueprint"
spr_file_draft = "spr.views.draft_files.app:create_app_blueprint"
bli_ui = "ui.bli:create_blueprint"
bli = "bli.views.records.app:create_app_blueprint"
bli_file = "bli.views.files.app:create_app_blueprint"
bli_file_draft = "bli.views.draft_files.app:create_app_blueprint"
mst_requests = "mst.views.requests.app:create_app_blueprint"
bli_requests = "bli.views.requests.app:create_app_blueprint"
spr_requests = "spr.views.requests.app:create_app_blueprint"
ui_tutorial = "ui.tutorial:create_blueprint"
ui_contact = "ui.contact:create_blueprint"
ui_under_development = "ui.under_development:create_blueprint"
ui_developers_team = "ui.developers_team:create_blueprint"
ui_supported_techniques = "ui.supported_techniques:create_blueprint"
ui_choose_method = "ui.choose_method:create_blueprint"
itc_ui = "ui.itc:create_blueprint"
itc = "itc.views.records.app:create_app_blueprint"
itc_requests = "itc.views.requests.app:create_app_blueprint"
itc_file = "itc.views.files.app:create_app_blueprint"
itc_file_draft = "itc.views.draft_files.app:create_app_blueprint"
bli_request_types = "bli.views.request_types.app:create_app_blueprint"
mst_request_types = "mst.views.request_types.app:create_app_blueprint"
itc_request_types = "itc.views.request_types.app:create_app_blueprint"
spr_request_types = "spr.views.request_types.app:create_app_blueprint"

[project.entry-points."invenio_i18n.translations"]
translations = "i18n"
mst = "mst"
spr = "spr"
bli = "bli"
itc = "itc"

[project.entry-points."invenio_db.alembic"]
repo = "common:alembic"

[project.entry-points."oarepo.fixtures"]
mbdb-common = "common.fixtures"

[project.entry-points."invenio_base.api_apps"]
mst = "mst.ext:MstExt"
spr = "spr.ext:SprExt"
bli = "bli.ext:BliExt"
itc = "itc.ext:ItcExt"

[project.entry-points."invenio_base.apps"]
mst = "mst.ext:MstExt"
spr = "spr.ext:SprExt"
bli = "bli.ext:BliExt"
itc = "itc.ext:ItcExt"

[project.entry-points."invenio_db.models"]
mst = "mst.records.models"
mst_file = "mst.files.models"
spr = "spr.records.models"
spr_file = "spr.files.models"
bli = "bli.records.models"
bli_file = "bli.files.models"
spr_file_draft = "spr.files.models"
mst_file_draft = "mst.files.models"
bli_file_draft = "bli.files.models"
itc = "itc.records.models"
itc_file = "itc.files.models"
itc_file_draft = "itc.files.models"

[project.entry-points."invenio_base.api_blueprints"]
mst = "mst.views.records.api:create_api_blueprint"
mst_file = "mst.views.files.api:create_api_blueprint"
mst_file_draft = "mst.views.draft_files.api:create_api_blueprint"
spr = "spr.views.records.api:create_api_blueprint"
spr_file = "spr.views.files.api:create_api_blueprint"
spr_file_draft = "spr.views.draft_files.api:create_api_blueprint"
bli = "bli.views.records.api:create_api_blueprint"
bli_file = "bli.views.files.api:create_api_blueprint"
bli_file_draft = "bli.views.draft_files.api:create_api_blueprint"
mst_requests = "mst.views.requests.api:create_api_blueprint"
bli_requests = "bli.views.requests.api:create_api_blueprint"
spr_requests = "spr.views.requests.api:create_api_blueprint"
itc = "itc.views.records.api:create_api_blueprint"
itc_requests = "itc.views.requests.api:create_api_blueprint"
itc_file = "itc.views.files.api:create_api_blueprint"
itc_file_draft = "itc.views.draft_files.api:create_api_blueprint"
bli_request_types = "bli.views.request_types.api:create_api_blueprint"
mst_request_types = "mst.views.request_types.api:create_api_blueprint"
itc_request_types = "itc.views.request_types.api:create_api_blueprint"
spr_request_types = "spr.views.request_types.api:create_api_blueprint"

[project.entry-points."invenio_search.mappings"]
mst = "mst.records.mappings"
spr = "spr.records.mappings"
bli = "bli.records.mappings"
itc = "itc.records.mappings"

[project.entry-points."invenio_jsonschemas.schemas"]
mst = "mst.records.jsonschemas"
spr = "spr.records.jsonschemas"
bli = "bli.records.jsonschemas"
itc = "itc.records.jsonschemas"

[project.entry-points."oarepo.models"]
mst = "mst.models:records.json"
spr = "spr.models:records.json"
bli = "bli.models:records.json"
itc = "itc.models:records.json"

[project.entry-points."oarepo.ui"]
mst = "mst.models:ui.json"
spr = "spr.models:ui.json"
bli = "bli.models:ui.json"
itc = "itc.models:ui.json"

[project.optional-dependencies]
tests = [
    "pytest-invenio>=1.4.11",
]

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"
