[metadata]
name = mbdb_common
version = 1.0.0
description = Project short description.
long_description = file: README.rst
author = Full Name
author_email = contact@domain.tld
url = https://domain.tld
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    # TODO: put package requirements here

[options.entry_points]
console_scripts =
    mbdb-common = mbdb_common.cli:main
oarepo.fixtures =
    mbdb-common = mbdb_common.fixtures

[options.extras_require]
testing =
    pytest
    # TODO: put package testing requirements here
develop =
    bumpversion
    coverage
    flake8
    mypy
    sphinx
    watchdog
    wheel
    # TODO: put package develop requirements here

[options.packages.find]
exclude =
    tests
    # TODO: put exclusion patterns here

[wheel]
universal = 1
