

[metadata]
name = mbdb-bli
version = 1.0.0
description = Repository model for Mbdb_Bli
authors = 


[options]
python = >=3.9
install_requires =
    oarepo>=11,<12
    oarepo-runtime>=1.0.0
    oarepo-vocabularies>=2.0.0
    invenio-drafts-resources>=1.0.4
    oarepo-published-service>=1.0.0
packages = find:


[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2


[options.entry_points]
invenio_base.api_apps = mbdb_bli = mbdb_bli.ext:Mbdb_bliExt
invenio_base.apps = mbdb_bli = mbdb_bli.ext:Mbdb_bliExt
invenio_db.alembic = mbdb_bli = mbdb_bli:alembic
invenio_db.models =
    mbdb_bli = mbdb_bli.records.models
    mbdb_bli_file = mbdb_bli.files.models
invenio_base.api_blueprints =
    mbdb_bli = mbdb_bli.views.records.api:create_api_blueprint
    mbdb_bli_file = mbdb_bli.views.files.api:create_api_blueprint
    mbdb_bli_file_draft = mbdb_bli.views.draft_files.api:create_api_blueprint
invenio_base.blueprints =
    mbdb_bli = mbdb_bli.views.records.app:create_app_blueprint
    mbdb_bli_file = mbdb_bli.views.files.app:create_app_blueprint
    mbdb_bli_file_draft = mbdb_bli.views.draft_files.app:create_app_blueprint
invenio_search.mappings =
    mbdb_bli = mbdb_bli.records.mappings
    mbdb_bli_file = mbdb_bli.files.mappings
invenio_jsonschemas.schemas = mbdb_bli = mbdb_bli.records.jsonschemas
oarepo.models =
    mbdb_bli = mbdb_bli.models:records.json
    mbdb_bli_file = mbdb_bli.models:files.json
invenio_i18n.translations =
    mbdb_bli = mbdb_bli
    mbdb_bli_file = mbdb_bli
oarepo.ui =
    mbdb_bli = mbdb_bli.models:ui.json
    mbdb_bli_file = mbdb_bli.models:ui.json


[options.extras_require]
tests = pytest-invenio>=1.4.11
