

[metadata]
name = mbdb-mst
version = 1.0.0
description = Repository model for Mbdb_Mst
authors = 


[options]
python = >=3.9
install_requires =
    invenio_access>=1.4.4
    invenio_app>=1.3.4
    invenio_db>=1.0.14
    invenio_pidstore>=1.2.3
    invenio_records>=2.0.0
    invenio-records-rest>=2.1.0
    invenio_records_permissions>=0.13.0
    invenio_records_resources>=0.21.4
    invenio-search>=2.1.0
    tqdm>=4.64.1
    oarepo-runtime>=1.0.0
packages = find:


[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2


[options.entry_points]
invenio_base.api_apps = mbdb_mst = mbdb_mst.ext:MbdbMstExt
invenio_base.apps = mbdb_mst = mbdb_mst.ext:MbdbMstExt
invenio_db.alembic = mbdb_mst = mbdb_mst.records:alembic
invenio_db.models = mbdb_mst = mbdb_mst.records.models
invenio_base.api_blueprints = mbdb_mst = mbdb_mst.views.records.api:create_api_blueprint
invenio_base.blueprints = mbdb_mst = mbdb_mst.views.records.app:create_app_blueprint
invenio_search.mappings = mbdb_mst = mbdb_mst.records.mappings
invenio_jsonschemas.schemas = mbdb_mst = mbdb_mst.records.jsonschemas
oarepo.models = mbdb_mst = mbdb_mst.models:model.json
invenio_i18n.translations = mbdb_mst = mbdb_mst
oarepo.ui = mbdb_mst = mbdb_mst.models:ui.json


[options.extras_require]
tests =
    invenio-app>=1.3.3
    invenio-db[postgresql,mysql,versioning]>=1.0.14,<2.0.0
    pytest-invenio>=1.4.11
    invenio_search[opensearch2]>=2.0.0
    Werkzeug>=2.2.3
    Flask-Login>=0.6.1
    pyyaml>=6.0
    requests>=2.28.1
