

[metadata]
name = mbdb-mst
version = 1.0.0
description = Repository model for Mbdb_Mst
authors = 


[options]
python = >=3.9
install_requires =
    oarepo-runtime>=1.0.0
    oarepo-vocabularies>=2.0.0
    invenio-drafts-resources>=1.0.4
    oarepo-published-service>=1.0.0
packages = find:


[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2


[options.entry_points]
invenio_base.api_apps = mbdb_mst = mbdb_mst.ext:Mbdb_mstExt
invenio_base.apps = mbdb_mst = mbdb_mst.ext:Mbdb_mstExt
invenio_db.alembic = mbdb_mst = mbdb_mst:alembic
invenio_db.models =
    mbdb_mst = mbdb_mst.records.models
    mbdb_mst_file = mbdb_mst.files.models
invenio_base.api_blueprints =
    mbdb_mst = mbdb_mst.views.records.api:create_api_blueprint
    mbdb_mst_file = mbdb_mst.views.files.api:create_api_blueprint
    mbdb_mst_file_draft = mbdb_mst.views.draft_files.api:create_api_blueprint
invenio_base.blueprints =
    mbdb_mst = mbdb_mst.views.records.app:create_app_blueprint
    mbdb_mst_file = mbdb_mst.views.files.app:create_app_blueprint
    mbdb_mst_file_draft = mbdb_mst.views.draft_files.app:create_app_blueprint
invenio_search.mappings =
    mbdb_mst = mbdb_mst.records.mappings
    mbdb_mst_file = mbdb_mst.files.mappings
invenio_jsonschemas.schemas = mbdb_mst = mbdb_mst.records.jsonschemas
oarepo.models =
    mbdb_mst = mbdb_mst.models:records.json
    mbdb_mst_file = mbdb_mst.models:files.json
invenio_i18n.translations =
    mbdb_mst = mbdb_mst
    mbdb_mst_file = mbdb_mst
oarepo.ui =
    mbdb_mst = mbdb_mst.models:ui.json
    mbdb_mst_file = mbdb_mst.models:ui.json


[options.extras_require]
tests = pytest-invenio>=1.4.11
