

[metadata]
name = mbdb-spr
version = 1.0.0
description = Repository model for Mbdb_Spr
authors = 


[options]
python = >=3.9
install_requires =
    oarepo>=11,<12
    oarepo-runtime>=1.0.0
    oarepo-vocabularies>=2.0.0
    invenio-drafts-resources>=1.0.4
packages = find:


[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2


[options.entry_points]
invenio_base.api_apps = mbdb_spr = mbdb_spr.ext:Mbdb_sprExt
invenio_base.apps = mbdb_spr = mbdb_spr.ext:Mbdb_sprExt
invenio_db.alembic = mbdb_spr = mbdb_spr:alembic
invenio_db.models =
    mbdb_spr = mbdb_spr.records.models
    mbdb_spr_file = mbdb_spr.files.models
invenio_base.api_blueprints =
    mbdb_spr = mbdb_spr.views.records.api:create_api_blueprint
    mbdb_spr_file = mbdb_spr.views.files.api:create_api_blueprint
invenio_base.blueprints =
    mbdb_spr = mbdb_spr.views.records.app:create_app_blueprint
    mbdb_spr_file = mbdb_spr.views.files.app:create_app_blueprint
invenio_search.mappings =
    mbdb_spr = mbdb_spr.records.mappings
    mbdb_spr_file = mbdb_spr.files.mappings
invenio_jsonschemas.schemas = mbdb_spr = mbdb_spr.records.jsonschemas
oarepo.models =
    mbdb_spr = mbdb_spr.models:records.json
    mbdb_spr_file = mbdb_spr.models:files.json
invenio_i18n.translations =
    mbdb_spr = mbdb_spr
    mbdb_spr_file = mbdb_spr
oarepo.ui =
    mbdb_spr = mbdb_spr.models:ui.json
    mbdb_spr_file = mbdb_spr.models:ui.json


[options.extras_require]
tests = pytest-invenio>=1.4.11
