[project]
name = "mbdb-site-repository"
version = "1.0.0"
description = ""
packages = []
authors = [
    { name = "Emil Dandanell Agerschou", email = "emildandanell.agerschou@ibt.cas.cz" },
]
dependencies = [
    "oarepo>=11,<12",
    "mbdb-common @ file:///${PROJECT_ROOT}/../../local/mbdb-common",
    "site @ file:///${PROJECT_ROOT}/site",
]
requires-python = ">=3.9,<3.11"
