[project]
name = "mbdb-site-repository"
version = "1.0.0"
description = ""
packages = []
authors = [
    { name = "Emil Dandanell Agerschou", email = "emildandanell.agerschou@ibt.cas.cz" },
]
dependencies = [
    "oarepo>=11,<12",
    "mbdb-bli @ file:///${PROJECT_ROOT}/../../models/mbdb-bli",
    "mbdb-mst @ file:///${PROJECT_ROOT}/../../models/mbdb-mst",
    "mbdb-common @ file:///${PROJECT_ROOT}/../../local/mbdb-common",
    "site @ file:///${PROJECT_ROOT}/site",
]
requires-python = ">=3.9,<3.11"
