
[metadata]
name = mbdb-mst-ui
version = attr: mbdb_mst_ui.__version__
description = Application package for mbdb-mst
long_description = file: README.md
long_description_content_type = text/markdown
keywords = oarepo ui narodni-repozitar mbdb-mst
license = MIT
author = Emil Dandanell Agerschou
author_email = Emildandanell.agerschou@ibt.cas.cz
platforms = any
url = 
classifiers =
    Development Status :: 2 - Pre-Alpha

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    oarepo-ui @ git+https://github.com/oarepo/oarepo-ui@alzbetapokorna/be-51-implement-jinjax-resolving-in-oarepo-ui#egg=oarepo-ui
    # mbdb-mst

[options.extras_require]

[options.entry_points]
invenio_base.apps =
    mbdb_mst_ui = mbdb_mst_ui.ext:MbdbMstExtension
invenio_base.api_apps =
    mbdb_mst_ui = mbdb_mst_ui.ext:MbdbMstExtension
invenio_assets.webpack =
    mbdb_mst_ui_theme = mbdb_mst_ui.theme.webpack:theme
invenio_base.blueprints =
    mbdb_mst_ui = mbdb_mst_ui.views:create_blueprint


[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401
