
[metadata]
name = mbdb_mst_ui
version = attr: mbdb_mst_ui.__version__
description = Application package for mbdb-mst
long_description = file: README.md
long_description_content_type = text/markdown
keywords = oarepo ui narodni-repozitar mbdb-mst
license = MIT
author = 
author_email = 
platforms = any
url = 
classifiers =
    Development Status :: 2 - Pre-Alpha

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    oarepo-ui>=4.0.10
    # mbdb-mst

[options.extras_require]

[options.entry_points]
invenio_base.apps =
    mbdb_mst_ui = mbdb_mst_ui.ext:MbdbMstUiExtension
invenio_base.api_apps =
    mbdb_mst_ui = mbdb_mst_ui.ext:MbdbMstUiExtension
invenio_assets.webpack =
    mbdb_mst_ui_theme = mbdb_mst_ui.theme.webpack:theme
invenio_base.blueprints =
    mbdb_mst_ui = mbdb_mst_ui.views:create_blueprint


[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401
