
[metadata]
name = mst-ui
version = attr: mst_ui.__version__
description = Application package for mbdb-mst
long_description = file: README.md
long_description_content_type = text/markdown
keywords = oarepo ui narodni-repozitar mbdb-mst
license = MIT
author = Miroslav Simek
author_email = miroslav.simek@cesnet.cz
platforms = any
url = 
classifiers =
    Development Status :: 2 - Pre-Alpha

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    oarepo-ui>=5.0.22
    # mbdb-mst

[options.extras_require]

[options.entry_points]
invenio_base.apps =
    mst_ui = mst_ui.ext:MstUiExtension
invenio_base.api_apps =
    mst_ui = mst_ui.ext:MstUiExtension
invenio_assets.webpack =
    mst_ui_theme = mst_ui.theme.webpack:theme
invenio_base.blueprints =
    mst_ui = mst_ui.views:create_blueprint


[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401
