
[metadata]
name = mbdb-site

[options]
install_requires =
    oarepo-runtime
    oarepo-ui @  git+https://github.com/oarepo/oarepo-ui@alzbetapokorna/be-51-implement-jinjax-resolving-in-oarepo-ui#egg=oarepo-ui
    python-dotenv

    oarepo-vocabularies


[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    mbdb_site_views = mbdb_site.views:create_blueprint
invenio_assets.webpack =
    mbdb_site_theme = mbdb_site.webpack:theme
